# minject

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  Makefile  README.md  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: hatch_test.yml  mypy.yml
docs/: dependency_injection.md
docs/.github/workflows/: hatch_test.yml
docs/dependency_injection_examples/: .gitignore  class_for_test.py  inject_define.py  inject_examples.py  mock_examples.py  mypy.ini  quick_start.py  requirements.txt  test.py
docs/examples/: philosophy.py
minject/: README.md  __init__.py  asyncio_extensions.py  config.py  inject.py  inject_attrs.py  metadata.py  mock.py  model.py  mypy_plugin.py  registry.py  service.py  services.py  types.py
tests/: __init__.py  test_async.py  test_registry.py  test_registry_attrs.py  test_registry_config.py  test_registry_helpers.py  test_service.py  test_start_close.py  test_unhashable_bindings.py
