[project]
name = "minject"
description = "A small dependency injection library for Python."
classifiers = ['Development Status :: 5 - Production/Stable']
dynamic = ["version"]
authors = [{ name = "Matt McHenry", email = "mmchenry@duolingo.com" }, { name = "Alek Binion", email = "alek@duolingo.com" }, { name = "Xiyan Shao", email = "xiyan@duolingo.com"}, { name = "Service Framework Team", email = "service-framework-team@duolingo.com" }]
requires-python = ">=3.7"

dependencies = [
    "attrs>=17.4",
    "typing_extensions>=4.1",
]

[build-system]
requires = ["hatchling >= 1.10.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "minject/__init__.py"

[tool.hatch.envs.default]
dependencies = [
    # Developer dependencies. E.g. for testing, building, packaging, etc.
    "coverage",
    "mypy",
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "typing",
]

[tool.hatch.envs.hatch-test]
dependencies = [
    # The default hatch-test dependencies are not compatible with Python 3.7, a version we want to test against. Hence
    # we need to specify our own dependencies here.
    # https://github.com/pypa/hatch/blob/3adae6c0dfd5c20dfe9bf6bae19b44a696c22a43/src/hatch/env/internal/test.py
    "coverage[toml]",
    'coverage-enable-subprocess',
    'pytest',
    'pytest-mock',
    'pytest-randomly',
    'pytest-rerunfailures',
    'pytest-xdist[psutil]',
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.7", "3.10"]


[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive minject"

[[tool.hatch.envs.types.matrix]]
python = ["3.7", "3.10"]
